clusters/main/kubernetes/my-apps/messaging/ess-helm/app/ess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: messaging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: domain-0-le-prod
    cert-manager.io/private-key-rotation-policy: Always
spec:
  rules:
    - host: matrix.${DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ess-synapse
                port:
                  number: 8008
  tls:
    - hosts:
      - matrix.${DOMAIN_0}
      secretName: matrix-tls-0
